fixed UI grid alignment bugs on all viewports

--- a/src/List.module.scss
+++ b/src/List.module.scss
@@ -1,14 +1,13 @@
 .container {
-  --item-width: 49%;
+  width: 100%;
   nav {
     position: fixed;
-    // width: 100%;
     top: 0;
     z-index: 100;
   }
 
   main {
-    margin: 0 10px;
+    margin: var(--lr-margin);
     margin-top: 120px;
     display: flex;
     flex-direction: column;
@@ -19,11 +18,11 @@
       list-style: none;
       padding: 0;
       margin: 0;
-      // border: 1px solid black;
       display: flex;
       flex-wrap: wrap;
-      justify-content: space-between;
       margin-top: 20px;
+      column-gap: var(--lr-margin);
+      row-gap: var(--lr-margin);
     }
   }
 }
